--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Samuel Nebiyu <nebiyuhiyabu@gmail.com>
-Solomon Ampah <pizzostor@gmail.com>
+Samuel Nebiyu - [Github](https://github.com/blackhammer116) / [Mail](nebiyuhiyabu@gmail.com)
+Solomon Ampah - [Github](https://github.com/pizzosta) / [Mail](pizzostor@gmail.com)
